# rateam_alt

./: .gitignore  README.md  compose.yaml
backend/: Dockerfile
backend/src/: main.py  pyproject.toml
web_frontend/: .dockerignore  Dockerfile
web_frontend/rateam_alt/: package-lock.json  package.json
