[tool.poetry]
name = "rateam_alt"
version = "0.1.0"
description = "Rate.am alternative"
authors = ["Polina Simonenko <rabarbrablad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
